--- a/src/index.css
+++ b/src/index.css
@@ -23,20 +23,19 @@ h3 {
     margin: 0 auto;
     padding: 2rem 0;
     list-style: none;
-    display: flex;
+    /* display: flex; */
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-row-gap: 1rem;
     grid-column-gap: 20px;
     justify-items: center;
-    justify-content: center;
-    flex-direction: row;
+    align-items: flex-start;
     flex-wrap: wrap;
-    align-items: center;
+    justify-content: center;
 }
 
 .Searchbar {
     display: flex;
-    background: #31de99;
+    background: #fe1251;
     height: 80px;
     align-items: center;
     justify-content: center;
@@ -51,137 +50,95 @@ h3 {
 
 .Pagination button {
     border: 0;
-    background: #31de99;
+    background: #fe1251;
     border-radius: 20px;
     padding: 5px 21px;
     box-shadow: 0 3px 12px 0 #00000029;
 }
 
-input.input-searchbar {
-    border-radius: 20px;
-    border: 0;
-    padding: 5px 20px;
-    box-shadow: 0px 2px 20px 0 #61773485;
-}
 
 
-
-
-
-/* The flip card container */
-.flip-card {
-    background-color: transparent;
-    width: 200px;
-    height: 200px;
-    outline: 2px solid #31de99;
-    perspective: 1000px;
-    /* Remove this if you don't want the 3D effect */
-    border-radius: 10px;
-}
-
-.flip-card-inner {
+.card {
     position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-    border-radius: 10px;
-}
-
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-    border-radius: 10px;
-}
-
-
-.flip-card-front,
-.flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    border-radius: 10px;
-}
-
-.flip-card-front {
-    background-color: #bbb;
-    color: black;
-}
-
-.flip-card-back {
     display: flex;
-    background: #0a229b;
-    background: radial-gradient(circle, rgb(10 34 155) 0%, rgb(0 9 109) 100%);
-    color: white;
-    transform: rotateY(180deg);
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    min-width: unset;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px, rgba(0, 0, 0, 0.13) 0px 0px 0px;
+    padding: 16px;
+    overflow: hidden;
+    background: rgb(255, 255, 255);
+    border-radius: 8px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgb(241, 241, 241);
+    border-image: initial;
+    transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s, 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 
-.flip-card .flip-card-inner .flip-card-front img {
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+/* .card-body {padding: 0} */
+
+
+.card:hover {
+    box-shadow: rgb(51 51 51 / 15%) 0px 7px 15px, rgb(0 0 0 / 5%) 0px 0px 3px;
+    border: 2px solid rgba(0, 0, 0, 0);
 }
 
 
-/* Modal container */
-.modal-window {
-    position: fixed;
-    background-color: rgb(48 48 48 / 86%);
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s;
-    text-align: center;
-}
 
-.modal-window:target {
-    opacity: 1;
-    pointer-events: auto;
-}
 
-.modal-window>div {
-    max-width: 600px;
+
+.category {
     position: relative;
-    margin: 10% auto;
-    padding: 2rem;
-    background: #fff;
-    color: #444;
-    border-radius: 30px;
-    border: 10px solid #a2cebc;
-    box-shadow: 0px 5px 20px 0 #0000003b;
+    border-radius: 24px;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 4px;
+    background: rgb(51, 51, 51);
+    color: rgb(255, 255, 255);
+}
+.category h5 {
+    margin: 3px 6px;
+    font-family: Inter, sans-serif;
+    font-weight: 800;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    font-size: 8.5px;
+    line-height: 10px;
 }
 
-.modal-window img {
-    width: 100px;
-    margin-bottom: 20px;
+.card-title {
+    font-size: 16px;
+    font-weight: 800;
+    color: rgb(51, 51, 51);
+    margin-top: 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-
-.modal-window header {
-    font-weight: bold;
+.card-text.description {
+    min-height: 21px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    line-height: 2;
+    color: rgba(51, 51, 51, 0.75);
 }
 
-.modal-close {
-    color: #aaa;
-    line-height: 50px;
-    font-size: 80%;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    top: 0;
-    width: 70px;
-    text-decoration: none;
+.card-text.price {
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 15px;
+    margin-bottom: 7px;
+    letter-spacing: normal;
+    color: rgb(254, 18, 81);
+    white-space: nowrap;
 }
 
-.modal-close:hover {
-    color: #000;
+.card-text.small-text {
+    font-family: Inter, sans-serif;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: normal;
 }
+
