--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,14 @@ h3 {
 }
 
 
+.card .card-header {
+    display: flex;
+    padding: 0;
+    margin-bottom: 0;
+    background-color: transparent;
+    border-bottom: transparent;
+    flex-direction: row-reverse;
+}
 
 .card {
     position: relative;
@@ -75,35 +83,44 @@ h3 {
     transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s, 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 
-/* .card-body {padding: 0} */
-
 
 .card:hover {
     box-shadow: rgb(51 51 51 / 15%) 0px 7px 15px, rgb(0 0 0 / 5%) 0px 0px 3px;
-    border: 2px solid rgba(0, 0, 0, 0);
 }
 
 
 
+.col {
+    display: flex;
+    justify-content: center;
+}
 
+.card-body {
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    margin-right: 0px;
+}
 
 .category {
     position: relative;
     border-radius: 24px;
     display: inline-block;
     vertical-align: top;
-    margin-right: 4px;
     background: rgb(51, 51, 51);
     color: rgb(255, 255, 255);
 }
-.category h5 {
+
+.category span {
     margin: 3px 6px;
     font-family: Inter, sans-serif;
-    font-weight: 800;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    font-size: 8.5px;
-    line-height: 10px;
+    font-size: 7.5px;
+    top: -2px;
+    position: relative;
+    padding: 0px 4px;
 }
 
 .card-title {
@@ -111,12 +128,12 @@ h3 {
     font-weight: 800;
     color: rgb(51, 51, 51);
     margin-top: 25px;
-    white-space: nowrap;
+    /* white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis; */
 }
 
-.card-text.description {
+.description {
     min-height: 21px;
     margin-bottom: 10px;
     font-size: 13px;
@@ -124,7 +141,7 @@ h3 {
     color: rgba(51, 51, 51, 0.75);
 }
 
-.card-text.price {
+.price {
     font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 800;
@@ -135,10 +152,11 @@ h3 {
     white-space: nowrap;
 }
 
-.card-text.small-text {
+.small-text {
     font-family: Inter, sans-serif;
     font-size: 11px;
     line-height: 15px;
     letter-spacing: normal;
 }
+
 
