Fixing Router paths

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ h3 {
     line-height: 1.4;
 }
 
+*:focus, *:focus-visible {
+    outline: none;
+}
+
 .Content {
     font-family: sans-serif;
     width: 90vw;
@@ -157,6 +161,22 @@ h3 {
     font-size: 11px;
     line-height: 15px;
     letter-spacing: normal;
+}
+
+.form-searchbar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 70px;
+}
+
+.input-searchbar {
+    width: 100%;
+    max-width: 500px;
+    border: 0;
+    padding: 10px 20px;
+    border-radius: 100px;
 }
 
 
