--- a/src/index.css
+++ b/src/index.css
@@ -149,25 +149,14 @@ margin: 10px;
   margin-right: 0px;
 }
 
-.category {
-  position: relative;
-  border-radius: 24px;
-  display: inline-block;
-  vertical-align: top;
-  background: rgb(51, 51, 51);
-  color: rgb(255, 255, 255);
+span.badge.rounded-pill {
+  font-size: 10px;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding: 10px 10px;
+  line-height: 0;
+  padding-top: 11px;
   margin-bottom: 20px;
-}
-
-.category span {
-margin: 3px 6px;
-font-family: Inter, sans-serif;
-letter-spacing: 0.1em;
-text-transform: uppercase;
-font-size: 9.5px;
-top: -2px;
-position: relative;
-padding: 0px 4px;
 }
 
 .carousel-item {
