--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,10 @@ h3 {
   line-height: 1;
 }
 
-*:focus, *:focus-visible {
-  outline: none;
+textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {
+  border-color: rgb(254 18 81 / 14%);
+  box-shadow: 0 1px 1px rgb(0 0 0 / 8%) inset, 0 0 8px rgb(254 18 81 / 22%);
+  outline: 0 none;
 }
 
 button.card-button.read-more {
@@ -244,15 +246,14 @@ color: rgba(51, 51, 51, 0.75);
 width: 285px;
 margin: 0 auto;
 text-align: center;
-padding-top: 60px;
 }
 
 .LoginForm form {
   margin: 0 auto;
-  max-width: 320px;
+  max-width: 240px;
   border: 2px solid #fe1251;
   border-radius: 10px;
-  padding: 27px 30px;
+  padding: 20px 20px;
   background: #f1f1f1;
 }
 
@@ -340,6 +341,9 @@ border-color: #beb6b6;
 }
 
 
+.offcanvas-start {
+  width: 250px;
+}
 
 
 
