--- a/src/index.css
+++ b/src/index.css
@@ -242,13 +242,13 @@ color: rgba(51, 51, 51, 0.75);
   border-radius: 100px;
 }
 
-.LoginForm {
+.LoginForm, .RegisterForm {
 width: 285px;
 margin: 0 auto;
 text-align: center;
 }
 
-.LoginForm form {
+.LoginForm form, .RegisterForm form {
   margin: 0 auto;
   max-width: 240px;
   border: 2px solid #fe1251;
@@ -257,14 +257,14 @@ text-align: center;
   background: #f1f1f1;
 }
 
-.LoginForm h1 {
+.LoginForm h1, .RegisterForm h1 {
   color: #fff;
   font-weight: 300;
   text-transform: uppercase;
   font-size: 21px;
 }
 
-.LoginForm .login-title {
+.LoginForm .login-title, .RegisterForm .login-title {
   width: 220px;
   height: 80px;
   background-color: #fe1251;
@@ -274,7 +274,7 @@ text-align: center;
   padding-top: 5px;
 }
 
-.LoginForm .login-image {
+.LoginForm .login-image, .RegisterForm .login-image {
   width: 100px;
   height: 100px;
   border-radius: 100px;
@@ -285,29 +285,29 @@ text-align: center;
   background-size: cover;
 }
 
-.LoginForm input {
+.LoginForm input, .RegisterForm input {
 margin-bottom: 20px;
 }
 
-.LoginForm a {
+.LoginForm a, .LoginForm a {
 display: block;
 }
 
-.LoginForm button {
+.LoginForm button, .RegisterForm button {
 width: 100%;
 background-color: #fe1251;
 border-color: #fe1251;
 margin-bottom: 10px;
 }
 
-.LoginForm .btn-sing-up {
+.LoginForm .btn-sign-up, .RegisterForm .btn-sign-up {
 width: 100%;
 background-color: #8f8f8f;
 border-color: #8f8f8f;
 margin-bottom: 10px;
 }
 
-.LoginForm button:hover {
+.LoginForm button:hover, .RegisterForm button:hover {
 width: 100%;
 background-color: #000000;
 border-color: #000000;
